modification done to support renamed config in json

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "supportedCurrencyStr": ["$", "SGD"],
+    "supportedCurrencySymbol": ["$", "SGD"],
     "supportedRange": ["10-20", "30-50"]
 }
