--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "supportedCurrencySymbol": ["$", "SGD"],
+    "supportedCurrencySymbol": ["SGD", "S$", "$"],
     "supportedRange": ["10-20", "30-50"]
 }
